--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </header>
 <main id="content">
 <p>Materials scientist and university lecturer.</br>
-Currently in Shenzhen, China.</p>
+Based in Shenzhen, China.</p>
 <div style="aspect-ratio: 4 / 3; width: 100%;">
   <iframe
     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d943276.9912736601!2d113.39447446612566!3d22.553816173887295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3403f408d0e15291%3A0xfdee550db79280c9!2sShenzhen%2C%20Guangdong%20Province%2C%20China!5e0!3m2!1sen!2ssg!4v1744458625427!5m2!1sen!2ssg"
@@ -40,9 +40,7 @@ Currently in Shenzhen, China.</p>
     loading="lazy"
     referrerpolicy="no-referrer-when-downgrade"
   ></iframe>
-</div><h3>Posts</h3>
-<ul id="posts">
-</ul>
+</div>
 
         </main><footer id="footer">
     © 2026 Dimitry Grebenyuk
